[package]
name = "hathor-daa-sim"
version = "0.1.0"
authors = [
  "Jan Segre <jan@hathor.network>",
  "Marcelo Salhab Brogliato <msbrogli@hathor.network>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
env_logger = "0.7"
log = "0.4"
noisy_float = { version = "0.1", features = ["serde-1"] }
objekt = "0.1"
petgraph = { version = "0.4", features = ["serde-1"] }
plotters = { version = "0.2", features = ["evcxr"] }
rand = "0.7"
rand_distr = "0.2"
rayon = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
typetag = "0.1"
